Fri Jan 18 09:43:16 CET 2002 Daniel Veillard <daniel@veillard.com>

	* libexslt/math.c: Charlie Bozeman provided the implementation
	  for the EXSLT math other functions

Thu Jan 17 23:41:53 CET 2002 Daniel Veillard <daniel@veillard.com>

	* libexslt/Makefile.am: jacob berkman pointed out that the
	  Cygwin patch forgot to add libexslt.h to the tarball

Thu Jan 17 23:39:00 CET 2002 Daniel Veillard <daniel@veillard.com>

	* libxslt/pattern.c: fixed I18N problemes in the template parser
	  pointed out by Xavier Cazin
	* tests/docs/Makefile.am tests/docs/bug-69.xml
	  tests/general/Makefile.am tests/general/bug-69.*: added a 
	  specific example in the regression tests

Thu Jan 17 10:40:03 CET 2002 Daniel Veillard <daniel@veillard.com>

	* Makefile.am libexslt/common.c libexslt/date.c libexslt/exslt.c
	  libexslt/exslt.h libexslt/exsltconfig.h.in libexslt/functions.c
	  libexslt/libexslt.h libexslt/math.c libexslt/saxon.c
	  libexslt/sets.c libexslt/strings.c libxslt/libxslt.h
	  libxslt/xslt.h libxslt/xsltconfig.h.in libxslt/xsltutils.c
	  xsltproc/xsltproc.c: applied Robert Collins patch for 
	  Cygwin support

Thu Jan 17 10:34:39 CET 2002 Daniel Veillard <daniel@veillard.com>

	* xsltproc/Makefile.am configure.in: ugly way to keep
	  the memory debugging active on my devel workstation
	  by bypassing libtool completely

Tue Jan 15 12:00:18 CET 2002 Daniel Veillard <daniel@veillard.com>

	* libxslt/templates.c: fixed bug #68751
	* tests/docs/Makefile.am tests/docs/bug-68.xml
	  tests/general/Makefile.am tests/general/bug-68.*: added a 
	  specific example in the regression tests
	
Tue Jan 15 10:40:41 CET 2002 Daniel Veillard <daniel@veillard.com>

	* libxslt/transform.c xsltproc/xsltproc.c: fixed a couple of
	  small problems raised by Justin Fletcher

Mon Jan 14 18:35:18 CET 2002 Daniel Veillard <daniel@veillard.com>

	* configure.in: releasing 1.0.10
	* doc/*: updating the docs for the release.
	* libxslt/namespaces.c libxslt/pattern.c libxslt/transform.c: