@@ -317,6 +317,7 @@
     <para>6: error in one of the documents</para>
     <para>7: unsupported xsl:output method</para>
     <para>8: string parameter contains both quote and double-quotes</para>
+    <para>9: internal processing error</para>
   </refsect1>
 
 
